// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render all tabs correctly 1`] = `
<Fragment>
  <BoxedTabs
    className="branch-like-tabs"
    onSelect={[Function]}
    selected={0}
    tabs={
      [
        {
          "key": 0,
          "label": <React.Fragment>
            <BranchIcon />
            <span
              className="spacer-left"
            >
              project_branch_pull_request.tabs.branches
            </span>
          </React.Fragment>,
        },
        {
          "key": 1,
          "label": <React.Fragment>
            <PullRequestIcon />
            <span
              className="spacer-left"
            >
              project_branch_pull_request.tabs.pull_requests
            </span>
          </React.Fragment>,
        },
      ]
    }
  />
  <div
    aria-labelledby="tab-0"
    id="tabpanel-0"
    role="tabpanel"
  >
    <Memo(BranchLikeTable)
      branchLikes={
        [
          {
            "analysisDate": "2018-01-01",
            "excludedFromPurge": true,
            "isMain": true,
            "name": "master",
          },
          {
            "analysisDate": "2018-01-01",
            "excludedFromPurge": true,
            "isMain": false,
            "name": "branch-1",
          },
          {
            "analysisDate": "2018-01-01",
            "excludedFromPurge": true,
            "isMain": false,
            "name": "branch-11",
          },
          {
            "analysisDate": "2018-01-01",
            "excludedFromPurge": true,
            "isMain": false,
            "name": "branch-12",
          },
          {
            "analysisDate": "2018-01-01",
            "excludedFromPurge": true,
            "isMain": false,
            "name": "branch-2",
          },
          {
            "analysisDate": "2018-01-01",
            "excludedFromPurge": true,
            "isMain": false,
            "name": "branch-3",
          },
        ]
      }
      component={
        {
          "breadcrumbs": [],
          "key": "my-project",
          "name": "MyProject",
          "qualifier": "TRK",
          "qualityGate": {
            "isDefault": true,
            "key": "30",
            "name": "Sonar way",
          },
          "qualityProfiles": [
            {
              "deleted": false,
              "key": "my-qp",
              "language": "ts",
              "name": "Sonar way",
            },
          ],
          "tags": [],
        }
      }
      displayPurgeSetting={true}
      onDelete={[Function]}
      onRename={[Function]}
      onUpdatePurgeSetting={[Function]}
      title="project_branch_pull_request.table.branch"
    />
  </div>
</Fragment>
`;

exports[`should render all tabs correctly 2`] = `
<Fragment>
  <BoxedTabs
    className="branch-like-tabs"
    onSelect={[Function]}
    selected={1}
    tabs={
      [
        {
          "key": 0,
          "label": <React.Fragment>
            <BranchIcon />
            <span
              className="spacer-left"
            >
              project_branch_pull_request.tabs.branches
            </span>
          </React.Fragment>,
        },
        {
          "key": 1,
          "label": <React.Fragment>
            <PullRequestIcon />
            <span
              className="spacer-left"
            >
              project_branch_pull_request.tabs.pull_requests
            </span>
          </React.Fragment>,
        },
      ]
    }
  />
  <div
    aria-labelledby="tab-1"
    id="tabpanel-1"
    role="tabpanel"
  >
    <Memo(BranchLikeTable)
      branchLikes={
        [
          {
            "analysisDate": "2018-01-01",
            "base": "master",
            "branch": "feature/foo/bar",
            "key": "1",
            "target": "master",
            "title": "PR-1",
          },
          {
            "analysisDate": "2018-01-01",
            "base": "master",
            "branch": "feature/foo/bar",
            "key": "2",
            "target": "master",
            "title": "PR-2",
          },
          {
            "analysisDate": "2018-01-01",
            "base": "master",
            "branch": "feature/foo/bar",
            "isOrphan": true,
            "key": "2",
            "target": "llb-100",
            "title": "PR-2",
          },
        ]
      }
      component={
        {
          "breadcrumbs": [],
          "key": "my-project",
          "name": "MyProject",
          "qualifier": "TRK",
          "qualityGate": {
            "isDefault": true,
            "key": "30",
            "name": "Sonar way",
          },
          "qualityProfiles": [
            {
              "deleted": false,
              "key": "my-qp",
              "language": "ts",
              "name": "Sonar way",
            },
          ],
          "tags": [],
        }
      }
      displayPurgeSetting={false}
      onDelete={[Function]}
      onRename={[Function]}
      onUpdatePurgeSetting={[Function]}
      title="project_branch_pull_request.table.pull_request"
    />
  </div>
</Fragment>
`;

exports[`should render deletion modal correctly 1`] = `
<DeleteBranchModal
  branchLike={
    {
      "analysisDate": "2018-01-01",
      "base": "master",
      "branch": "feature/foo/bar",
      "key": "1001",
      "target": "master",
      "title": "Foo Bar feature",
    }
  }
  component={
    {
      "breadcrumbs": [],
      "key": "my-project",
      "name": "MyProject",
      "qualifier": "TRK",
      "qualityGate": {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": [
        {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": [],
    }
  }
  onClose={[Function]}
  onDelete={[Function]}
/>
`;

exports[`should render renaming modal correctly 1`] = `
<RenameBranchModal
  branch={
    {
      "analysisDate": "2018-01-01",
      "excludedFromPurge": true,
      "isMain": true,
      "name": "master",
    }
  }
  component={
    {
      "breadcrumbs": [],
      "key": "my-project",
      "name": "MyProject",
      "qualifier": "TRK",
      "qualityGate": {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": [
        {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": [],
    }
  }
  onClose={[Function]}
  onRename={[Function]}
/>
`;
